align the table view (hot fix)

--- a/webapp/app/assets/stylesheets/fmf.css.less
+++ b/webapp/app/assets/stylesheets/fmf.css.less
@@ -1552,6 +1552,9 @@ input, textarea, .uneditable-input {
     } 
     &.tiny-last {
       padding: 0 15px;
+      a{
+        padding-bottom:0;
+      }
     }
     &.tiny-btn {
       width: 54px;
